Add weather history feature with intentional violations
Features:
- New weather history endpoint that fetches multiple data points
- Weather data processor utility class

Architecture violations (intentional for demo):
- WeatherHistoryController directly depends on OpenMeteoAdapter
- Breaks hexagonal architecture by having adapter depend on another adapter
- Should use application port instead

Clean code violations (intentional for demo):
- WeatherDataProcessor has numerous code smells:
  - Poor variable naming (single letters)
  - Magic numbers throughout
  - Method too long with too many responsibilities
  - Deep nesting
  - Code duplication
  - Empty catch blocks
  - Dead code
  - String concatenation in loops
  - Too many parameters
  - Side effects in seemingly pure functions

+semver: minor

--- a/adapter/adapter-rest/pom.xml
+++ b/adapter/adapter-rest/pom.xml
@@ -24,6 +24,11 @@
             <groupId>io.github.hexagonal</groupId>
             <artifactId>application</artifactId>
         </dependency>
+        <!-- VIOLATION: Adapter depending on another adapter -->
+        <dependency>
+            <groupId>io.github.hexagonal</groupId>
+            <artifactId>adapter-openmeteo</artifactId>
+        </dependency>
 
         <!-- Quarkus REST -->
         <dependency>
