Add User Preferences Management
Added user preferences feature to enhance the user experience by allowing
customization of weather-related settings.

Features:
- Temperature unit selection (Celsius/Fahrenheit)
- Default location configuration
- Notification preferences
- In-memory storage for user preferences

Implementation:
- Added UserPreferences and TemperatureUnit domain models
- Created ManageUserPreferencesUseCase port
- Implemented UserPreferencesService application service
- Added InMemoryUserPreferencesRepository adapter for persistence
- Exposed REST API at /preferences for saving and retrieving preferences

--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -18,5 +18,6 @@
     <modules>
         <module>adapter-rest</module>
         <module>adapter-openmeteo</module>
+        <module>adapter-preferences</module>
     </modules>
 </project>
