Add weather alert system
Added weather alert functionality to notify users of extreme weather conditions.

Features:
- Alert detection for extreme heat, cold, heavy rain, and snow storms
- Severity classification (LOW, MODERATE, HIGH, EXTREME)
- REST API endpoint at /weather/alert
- Human-readable alert messages

Implementation:
- Added WeatherAlert, AlertType, and AlertSeverity domain models
- Created CheckWeatherAlertUseCase port
- Implemented WeatherAlertService with alert logic
- Added REST controller and response mappers
- Comprehensive test coverage with unit tests
- Added CDI and Jandex support to application module

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>jboss-logging</artifactId>
         </dependency>
 
+        <!-- CDI for dependency injection -->
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -51,4 +57,21 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.smallrye</groupId>
+                <artifactId>jandex-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>make-index</id>
+                        <goals>
+                            <goal>jandex</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
